experimental/ir/testdata/extend/ok.proto.stderr.txt
error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:26:12
   |
26 |     extend Foo {
   |            ^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:28:18
   |
28 |         optional Foo x2 = 2;
   |                  ^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:28:18
   |
28 |         optional Foo x2 = 2;
   |                  ^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `test.Foo` in this scope
  --> testdata/extend/ok.proto:31:12
   |
31 |     extend test.Foo {
   |            ^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `.test.Foo` in this scope
  --> testdata/extend/ok.proto:32:18
   |
32 |         repeated .test.Foo x3 = 3;
   |                  ^^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `.test.Foo` in this scope
  --> testdata/extend/ok.proto:32:18
   |
32 |         repeated .test.Foo x3 = 3;
   |                  ^^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `.test.Foo` in this scope
  --> testdata/extend/ok.proto:35:12
   |
35 |     extend .test.Foo {
   |            ^^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `test.Foo` in this scope
  --> testdata/extend/ok.proto:36:18
   |
36 |         repeated test.Foo x4 = 4;
   |                  ^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `test.Foo` in this scope
  --> testdata/extend/ok.proto:36:18
   |
36 |         repeated test.Foo x4 = 4;
   |                  ^^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.Foo`

error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:40:8
   |
40 | extend Foo {
   |        ^^^ not found in this scope
   = help: the full name of this scope is `test`

error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:42:14
   |
42 |     optional Foo x6 = 6;
   |              ^^^ not found in this scope
   = help: the full name of this scope is `test`

error: cannot find `Foo.Foo` in this scope
  --> testdata/extend/ok.proto:45:8
   |
45 | extend Foo.Foo {
   |        ^^^^^^^ not found in this scope
   = help: the full name of this scope is `test`

error: cannot find `Foo` in this scope
  --> testdata/extend/ok.proto:47:14
   |
47 |     optional Foo x8 = 8;
   |              ^^^ not found in this scope
   = help: the full name of this scope is `test`

encountered 13 errors
